crates/forge_provider/src/forge_provider/snapshots/forge_provider__antinomy__request__tests__tool_message_conversion.snap
---
source: crates/forge_provider/src/antinomy/request.rs
expression: router_message
---
{
  "role": "tool",
  "content": "<forge_tool_result><forge_tool_name>test_tool</forge_tool_name><success><![CDATA[{\n               \"user\": \"John\",\n               \"age\": 30,\n               \"address\": [{\"city\": \"New York\"}, {\"city\": \"San Francisco\"}]\n            }]]></success></forge_tool_result>",
  "name": "test_tool",
  "tool_call_id": "123"
}
