crates/forge_provider/src/forge_provider/snapshots/forge_provider__antinomy__request__tests__user_message_conversion.snap
---
source: crates/forge_provider/src/antinomy/request.rs
expression: router_message
---
{
  "role": "user",
  "content": "Hello"
}
